# DiscoveryPortalMac

./: .gitignore  AppState.swift  DiscoveryPortalMac.xctestplan  Makefile  README.md  backfill_hashes.py  check_db_path.py  cleanup_dbs.sh  config.ini  copilot_status.md  dda_db_report.txt  final_summary.txt  find_dda_dbs.py  git_cleanup.sh  ingest.py  list_project_files.py  log_utils.py  migrate_documents.py  migrate_structure.py  migrate_to_modules.py  pipeline.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_dda.sh  run_test.sh  schema.sql  session.sh  session_log.py.old.py  setup_schema.py  signoff.command  signoff.sh  signon.command  signon.sh  test_ingestion.py  unprocessed.txt
DiscoveryPortalMac/: AppPaths.swift  ContentView.swift  CoverageBuilder.swift  DBManager.swift  DiscoveryPortalMacApp.swift  Document.swift  DocumentRepository.swift  File.txt  FileIndexRow.swift  FileIndexer.swift  IndexedFilesView.swift  Item.swift  Models.swift  PreferencesView.swift
DiscoveryPortalMac.xcodeproj/: project.pbxproj
DiscoveryPortalMacTests/: DiscoveryPortalMacTests.swift
DiscoveryPortalMacUITests/: DiscoveryPortalMacUITests.swift  DiscoveryPortalMacUITestsLaunchTests.swift
config/: aliases.json
dda/: batch_pipeline.py  check_db.py  config.py  dashboard_api.py  dashboard_queries.py  db_schema_inspector.py  dda.py.old.py  document_api.py  indexer.py  list_tables.py  pipeline.py  progress.py  schema.sql  search_text.py
logs/: dir_snapshot.md  session_state.md
tests/: test_batch_pipeline.py  test_classifier.py  test_config_utils.py  (+10 more)
(+32 files in other folders)
