[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discoveryportalmac"
version = "0.1.0"
description = "Document discovery portal"
authors = [{ name = "Jack McVickar", email = "jack@mcvickar.com" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["dda*"]
